--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 
     <body>
         <div class="header">
-            <h1>Traductor De Idiomas</h1>
+            <img src="Black White Minimalist Initials Monogram Jewelry Logo(1).png" alt="Logo">
+            <h1>Traductor</h1>
         </div>
         
         <div class="container">
